--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
                 <li><a href="https://steamcommunity.com/id/IFreezeNO/" target="_blank"><i class="fa fa-steam"></i></a></li>
                 <li><a href="https://twitter.com/IFreezeNO" target="_blank"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="https://twitch.tv/IFreezeNO" target="_blank"><i class="fa fa-twitch"></i></a></li>
-                <li><a href="https://github.com/IFreezeNO/" target="_blank"><i class="fa fa-github"></i></a></li>
+                <li><a href="https://github.com/IFreezeNO/Current-steam-game-api/blob/master/README.md" target="_blank"><i class="fa fa-github"></i></a></li>
                 <li><a href="https://steamcommunity.com/tradeoffer/new/?partner=242770205&token=2078YPrp" target="_blank"><i class="fa fa-gratipay"></i></a></li>
                 </ul>
             </section>
