--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
         <h1>Search for Steam users</h1> 
         <p>You can search with steam64 or username</p>
             <section class="my-4 form-inline">
-                    <input type="text" placeholder="IFreezeNO"  id="steamid" class="form-control col mr-2" required>
+                    <input type="text" placeholder="Search for steam users..."  id="steamid" class="form-control col mr-2" required>
                     <button id="submitbutton" class="btn btn-success" onclick="submit()">Search</button>
             </section>
             <section class="media">
