--- a/views/index.html
+++ b/views/index.html
@@ -11,23 +11,24 @@
         <meta property="og:url" content="https://www.in-game.tech/" />
         <meta name="theme-color" content="#2a2e3d" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta property="og:title" content="IN-GAME.tech | Look up what a user is playing right now!" />
+        <meta property="og:title" content="IN-GAME.tech | API for streamers!" />
         <link rel="shortcut icon" href="./img/favicon.png" />
-        <meta property="og:description" content="With in-game API you can attach it to nightbot and it will tell your viewers what game you are playing on steam. Perfect for variety streamers!" />
-        <meta name="keywords" content="Steam game api, current game steam, steam user api, twitch, variety stream, nightbot, look up steam user">
-        <meta name="description" content="With in-game API you can attach it to nightbot and it will tell your viewers what game you are playing on steam. Perfect for variety streamers!" />
+        <meta property="og:description" content="With in-game API you can attach our API to nightbot and it will tell your viewers what game you are playing on steam or how many elo you have on faceit. Perfect for variety streamers!" />
+        <meta name="keywords" content="Steam game api, current game steam, steam user api, twitch, variety stream, nightbot, look up steam user, faceit elo, faceit api, faceit nightbot, faceit commands, faceit nightbot commands">
+        <meta name="description" content="With in-game API you can attach our API to nightbot and it will tell your viewers what game you are playing on steam or how many elo you have on faceit. Perfect for variety streamers!" />
     
-        <title>Search for steam users</title>
+        <title>IN-GAME.tech | API for streamers</title>
       <script src="./js/process.js"></script>
     </head>
     <body onload="start()">
         <main class="container">
-            <h1>IN-GAME.TECH API</h1>
+            <h1>IN-GAME.tech API</h1>
             <p>Here you have all the in-game.tech APIs</p>
             <section class="my-4 form-inline">
                         <div style="background: white; padding: 1rem;">
                             <p>Nightbot command for https://in-game.tech/<code>*steamid*</code></p>
-
+                            <p>URL example: <a href="https://in-game.tech/steamid/ifreezeno">https://in-game.tech/steamid/<code>ifreezeno</code></a>
+                             
                             <code>$(eval const api = $(urlfetch json https://in-game.tech/steamid/<code>*steamid*</code> ); if (api.error) {'Error';} else { api['steamname']+ ' is currently playing: ' + api['currentgame']})</code>
                                 <br />
                                 <br />
@@ -35,7 +36,7 @@
                                 <br />
                                 <br />
                             <p>Nightbot command for https://in-game.tech/<code>*faceit*</code></p>
-
+                            <p>URL example: <a href="https://in-game.tech/faceit/IFreeze23">https://in-game.tech/faceit/<code>IFreeze23</code></a>
                             <code>$(eval const api = $(urlfetch json https://in-game.tech/faceit/<code>*faceit*</code> ); if (api.error) {'Error';} else { 'Faceit level: '+api['level']+ ' ELO: ' +api['elo']+ '. ELO needed for rankup/rankdown ' +api['rankup']+'/'+api['rankdown']})</code>
                                 <br />
                                 <br />
