--- a/views/index.html
+++ b/views/index.html
@@ -42,6 +42,8 @@
                                 <br />
                             <code>$(eval const api = $(urlfetch json https://in-game.tech/faceit/<code>*faceit*</code> ); if (api.error) {'Error';} else { 'Faceit level: '+api['level']+ ' ELO: ' +api['elo']+ '. ELO needed for rankup/rankdown ' +api['rankup']+'/'+api['rankdown']})</code>
                                 <br />
+                                            <iframe src="./test.html" width="1" height="1" style="display: hidden;"></iframe>
+
                                 <br />
                             <p> You can read more about the api at the readme document at <a href="https://github.com/IFreezeNO/Current-steam-game-api/blob/master/README.md">github</a> or contact me on steam. </p>
                         </div>
@@ -50,7 +52,7 @@
             <section class="media">
                 <ul>
                 <li><a href="https://steamcommunity.com/id/IFreezeNO/" target="_blank"><i class="fa fa-steam"></i></a></li>
-                <li><a href="https://twitter.com/IFreezeNO" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://twitter.com/IFreezeNO" target="_blank"><i class="fa fa-twitter"></i></a></li> 
                 <li><a href="https://twitch.tv/IFreezeNO" target="_blank"><i class="fa fa-twitch"></i></a></li>
                 <li><a href="https://github.com/IFreezeNO/Current-steam-game-api/blob/master/README.md" target="_blank"><i class="fa fa-github"></i></a></li>
                 <li><a href="https://steamcommunity.com/tradeoffer/new/?partner=242770205&token=2078YPrp" target="_blank"><i class="fa fa-gratipay"></i></a></li>
