--- a/views/css/main.css
+++ b/views/css/main.css
@@ -1,3 +1,52 @@
-a{color:inherit}a:hover{color:inherit;}body{font-family:Source Sans Pro;background:#282828;background:linear-gradient(-45deg,#ee775e,#e73c7e,#23a6d5,#23d5ab);background-size:400% 400%;animation:Gradient 15s ease infinite}h1{font-weight:lighter;font-size:80
-     x;color:#fff;text-align:center;padding-top:50px;margin-bottom:0}.main{margin:auto}body > main > p{font-family:Source Sans Pro;text-align:center;font-size:20px;color:#fff;margin-top:0}ul{display:-webkit-inline-box;margin:auto}li{list-style:none;padding:0;margin:auto;margin:20px;font-size:50px;color:#fff}li:hover{color:#292929;transition:.5s}@keyframes Gradient{0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}@media only screen and (device-width:768px){.media{display:none}}@media only screen and (max-width:600px){.media{display:none}}@media only screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait){.media{display:none}}@media only screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape){.media{display:none}}
+a{color:inherit}a:hover{color:inherit;}body{font-family:Source Sans Pro;background:#282828;background:linear-gradient(-45deg,#ee775e,#e73c7e,#23a6d5,#23d5ab);background-size:400% 400%;animation:Gradient 15s ease infinite}h1{font-weight:lighter;font-size:80px;color:#fff;text-align:center;padding-top:50px;margin-bottom:0}.main{margin:auto}body > main > p{font-family:Source Sans Pro;text-align:center;font-size:20px;color:#fff;margin-top:0}ul{display:-webkit-inline-box;margin:auto}li{list-style:none;padding:0;margin:auto;margin:20px;font-size:50px;color:#fff}li:hover{color:#292929;transition:.5s}@keyframes Gradient{0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}@media only screen and (device-width:768px){.media{display:none}}@media only screen and (max-width:600px){.media{display:none}}@media only screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:portrait){.media{display:none}}@media only screen and (min-device-width:481px) and (max-device-width:1024px) and (orientation:landscape){.media{display:none}}
+
+/* Style the element that is used to open and close the accordion class */
+p.accordion {
+    background-color: #eee;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    margin-bottom:10px;
+}
+
+/* Add a background color to the accordion if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+p.accordion.active, p.accordion:hover {
+    background-color: #ddd;
+}
+
+/* Unicode character for "plus" sign (+) */
+p.accordion:after {
+    content: '\2795'; 
+    font-size: 13px;
+    color: #777;
+    float: right;
+    margin-left: 5px;
+}
+
+/* Unicode character for "minus" sign (-) */
+p.accordion.active:after {
+    content: "\2796"; 
+}
+
+/* Style the element that is used for the panel class */
+
+div.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: 0.4s ease-in-out;
+    opacity: 0;
+    margin-bottom:10px;
+}
+
+div.panel.show {
+    opacity: 1;
+    max-height: 500px; /* Whatever you like, as long as its more than the height of the content (on all screen sizes) */
+}
       
