--- a/views/index.html
+++ b/views/index.html
@@ -11,46 +11,47 @@
         <meta property="og:url" content="https://www.in-game.tech/" />
         <meta name="theme-color" content="#2a2e3d" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta property="og:title" content="IN-GAME.tech | API for streamers!" />
+        <meta property="og:title" content="IN-GAME.tech | Look up what a user is playing right now!" />
         <link rel="shortcut icon" href="./img/favicon.png" />
-        <meta property="og:description" content="With in-game API you can attach our API to nightbot and it will tell your viewers what game you are playing on steam or how many elo you have on faceit. Perfect for variety streamers!" />
-        <meta name="keywords" content="Steam game api, current game steam, steam user api, twitch, variety stream, nightbot, look up steam user, faceit elo, faceit api, faceit nightbot, faceit commands, faceit nightbot commands">
-        <meta name="description" content="With in-game API you can attach our API to nightbot and it will tell your viewers what game you are playing on steam or how many elo you have on faceit. Perfect for variety streamers!" />
+        <meta property="og:description" content="With in-game API you can attach it to nightbot and it will tell your viewers what game you are playing on steam. Perfect for variety streamers!" />
+        <meta name="keywords" content="Steam game api, current game steam, steam user api, twitch, variety stream, nightbot, look up steam user">
+        <meta name="description" content="With in-game API you can attach it to nightbot and it will tell your viewers what game you are playing on steam. Perfect for variety streamers!" />
     
-        <title>IN-GAME.tech | API for streamers</title>
+        <title>Search for steam users</title>
       <script src="./js/process.js"></script>
     </head>
-    <body onload="start()">
+    <body>
         <main class="container">
-            <h1>IN-GAME.tech API</h1>
-            <p>Here you have all the in-game.tech APIs</p>
+        <h1>Search for Steam users</h1> 
+        <p>You can search with steam64 or username</p>
             <section class="my-4 form-inline">
-                        <div style="background: white; padding: 1rem;">
-                            <p>Nightbot command for https://in-game.tech/<code>*steamid*</code></p>
-                            <p>URL example: <a href="https://in-game.tech/steamid/ifreezeno">https://in-game.tech/steamid/<code>ifreezeno</code></a>
-                                <br />
-                                <br />
-                            <code>$(eval const api = $(urlfetch json https://in-game.tech/steamid/<code>*steamid*</code> ); if (api.error) {'Error';} else { api['steamname']+ ' is currently playing: ' + api['currentgame']})</code>
-                                <br />
-                                <br />
-                            <code>$(eval const api = $(urlfetch json https://in-game.tech/steamid/<code>*steamid*</code> ); if (api.error) {'Error';} else { api['steamname']+ ' is currently playing: ' + api['currentgame']+ ' | Steam : '+api['gamestore']+ ' for '+api['price']+ ' EUR'})</code>
-                                <br />
-                                <hr />
-                            <p>Nightbot command for https://in-game.tech/<code>*faceit*</code></p>
-                            <p>URL example: <a href="https://in-game.tech/faceit/IFreeze23">https://in-game.tech/faceit/<code>IFreeze23</code></a>
-                                <br /> 
-                                <br />
-                            <code>$(eval const api = $(urlfetch json https://in-game.tech/faceit/<code>*faceit*</code> ); if (api.error) {'Error';} else { 'Faceit level: '+api['level']+ ' ELO: ' +api['elo']+ '. ELO needed for rankup/rankdown ' +api['rankup']+'/'+api['rankdown']})</code>
-                                <br />
-                                <br />
-                            <p> You can read more about the api at the readme document at <a href="https://github.com/IFreezeNO/Current-steam-game-api/blob/master/README.md">github</a> or contact me on steam. </p>
-                        </div>
-                    </section>
+                <div style="background: white; padding: 1rem; width: 100%;">
+                        <p class="accordion">Faceit API</p>
+                            <div class="panel">
+                                <p>Nightbot command for https://in-game.tech/<code>*faceit*</code></p>
+                                <p>URL example: <a href="https://in-game.tech/faceit/IFreeze23">https://in-game.tech/faceit/<code>IFreeze23</code></a>
+                                <br /><hr />
+                                <p>!addcom *commandname* $(eval const api = $(urlfetch json https://in-game.tech/faceit/<code>*faceit*</code> ); if (api.error) {'Error';} else { 'Faceit level: '+api['level']+ ' ELO: ' +api['elo']+ '. ELO needed for rankup/rankdown ' +api['rankup']+'/'+api['rankdown']})</p>
+                                <img src="https://i.imgur.com/lfXKSLg.png" alt="faceit command" title="The command would look like this in chat">
+                                <br /><br />
+                            </div>
+
+                        <p class="accordion">Steam game API</p>
+                            <div class="panel">
+                                <p>Nightbot command for https://in-game.tech/<code>*steamid*</code></p>
+                                    <p>URL example: <a href="https://in-game.tech/steamid/ifreezeno">https://in-game.tech/steamid/<code>ifreezeno</code></a>
+                                    <br /><hr />
+                                    <p>!addcom *commandname* $(eval const api = $(urlfetch json https://in-game.tech/steamid/<code>*steamid*</code> ); if (api.error) {'Error';} else { api['steamname']+ ' is currently playing: ' + api['currentgame']})</p>
+                                    <p>!addcom *commandname* $(eval const api = $(urlfetch json https://in-game.tech/steamid/<code>*steamid*</code> ); if (api.error) {'Error';} else { api['steamname']+ ' is currently playing: ' + api['currentgame']+ ' | Steam : '+api['gamestore']+ ' for '+api['price']+ ' EUR'})</p>
+                                    <img src="https://i.imgur.com/XXgbBXr.png" alt="steam game command" title="The command would look like this in chat">
+                                    <br /><br />
+                            </div>
+                    </div>
             </section>
             <section class="media">
                 <ul>
                 <li><a href="https://steamcommunity.com/id/IFreezeNO/" target="_blank"><i class="fa fa-steam"></i></a></li>
-                <li><a href="https://twitter.com/IFreezeNO" target="_blank"><i class="fa fa-twitter"></i></a></li> 
+                <li><a href="https://twitter.com/IFreezeNO" target="_blank"><i class="fa fa-twitter"></i></a></li>
                 <li><a href="https://twitch.tv/IFreezeNO" target="_blank"><i class="fa fa-twitch"></i></a></li>
                 <li><a href="https://github.com/IFreezeNO/Current-steam-game-api/blob/master/README.md" target="_blank"><i class="fa fa-github"></i></a></li>
                 <li><a href="https://steamcommunity.com/tradeoffer/new/?partner=242770205&token=2078YPrp" target="_blank"><i class="fa fa-gratipay"></i></a></li>
