--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
         <meta name="description" content="With in-game API you can attach our API to nightbot and it will tell your viewers what game you are playing on steam or how many elo you have on faceit. Perfect for variety streamers!" />
     
         <title>IN-GAME.tech | API for streamers</title>
-      <script src="./js/process.js"></script>
+      <script src="./js/process.js" type="text/javascript"></script>
     </head>
     <body>
         <main class="container">
